@startuml

class Guitarra{
    - nome : String
    - modelos : String
}

class Eletrica{
    - numroCaptadores : Interger
    - tipoPonte : String
}

class Acustica{
    - PossuiCutaway : Boolean
    - tipoMadeiraTampo : String
    - eletroacustica : Boolean
}

class Corda{
    - calibre : String
}

class Estojo{
    - material : String
}

class ConfiguracaoAudio{
    - tipoAmplificador : String
    - presetEqualizador : String
    - temPedaleira : boolean
}

class EstacaoTeste {
    - nome : String
    - ocupada : boolean
    - localizacao : String
}

enum EstiloMusical{
    - ROCK: int
    - COUNTRY: int
    - HEAVYMETAL: int
    - JAZZ: int
    - POP: int
}

enum EstiloCase{
    - BAG: int
    - SEMICASE: int
    - HARDCASE: int
    - FLIGHTCASE: int
    - MOLDADO: int
}

enum Modelos{
    - STRATOCASTER: int
    - SG: int
    - MARTINLX1E: int
    - FENDERCD60S: int
    - LESPAUL: int
}

'relacionamento'

Guitarra "1" --> "*" Corda
Guitarra "*" --> "1" Modelos

Guitarra "*" --> "*" EstiloMusical

Guitarra "1" --> "1" Estojo

Eletrica -up-|> Guitarra
Acustica -up-|> Guitarra

EstiloCase "1" --> "1" Estojo

ConfiguracaoAudio "1" -- "1" EstacaoTeste

@enduml